fix: alterado algums estruturas de pastas e criado algumas interfaces para melhorar a generificação da aplicação.